bug 91491 - Invalidate the correct area when there is a caption. Invalidate max of area before reflow and area after. sr=kin, r=bernd.